fixed emoji wrapping issue

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -65,6 +65,8 @@ section {
   font-weight: 600;
   color: #474747;
   opacity: 0.9;
+  -webkit-hyphens: none;
+  hyphens: none;
 }
 
 .home_subtitle_tail {
